test/classes/dinan/circular_init_unbroken.good
circular_init_unbroken.chpl:2: error: statement references variable 'b' before it is defined
